# burnt

./: .gitignore  AGENTS.md  BUGS.md  CLAUDE.md  CONCEPT.md  DESIGN.md  FUTURE_TODOS.md  PLAN.md  README.md  RESEARCH.md  opencode.json  opencode.jsonc  pyproject.toml  run_ts.rs
.azure/: pipelines.yml
burnt-engine/: Cargo.toml  build.rs
burnt-engine/src/: lib.rs  types.rs
burnt-engine/src/graph/: mod.rs
burnt-engine/src/ingestion/: dabs.rs  files.rs  mod.rs
burnt-engine/src/parse/: mod.rs  notebooks.rs  python.rs  sql.rs
burnt-engine/src/rules/: mod.rs
burnt-engine/src/semantic/: bindings.rs  mod.rs  scope.rs
docs/: anti-pattern-rules.md  cinder-pattern-language.md  cli-workflows.md  configuration.md  explain-cost-schema.md  ml-architecture.md  usage.md  (+2 more)
src/burnt-engine/: Cargo.toml  README.md  build.rs
src/burnt-engine/rules/: registry.toml  registry_complete.toml  registry_with_queries.toml
src/burnt-engine/rules/Delta/: BD001_delta_vacuum_too_frequent.toml  BD002_missing_zorder.toml
src/burnt-engine/rules/Notebook/: BB001_cluster_tag_missing.toml  BN001_missing_run_target.toml  BN002_dynamic_sql.toml  BN003_circular_run.toml  BP005_missing_cell_type.toml  BP006_large_notebook.toml  BP007_no_markdown.toml
src/burnt-engine/rules/Performance/python/: BP001_cell_no_comment.toml  BP002_long_line.toml  BP003_magic_in_plain.toml  BP004_deprecated_magic.toml  BP008_collect_without_limit.toml  BP010_python_udf.toml  BP011_to_pandas.toml  BP012_repartition_one.toml  BP014_cross_join.toml  BP015_pandas_udf.toml  BP016_count_without_filter.toml  BP020_with_column_in_loop.toml  BP021_jdbc_incomplete_partition.toml  BP022_sdp_prohibited_ops.toml  BP023_window_without_partition_by.toml  BP030_cache_without_unpersist.toml  BP031_single_use_cache.toml  BP032_repeated_actions_no_cache.toml
src/burnt-engine/rules/Performance/sql/: BP009_select_star.toml  BP013_order_by_without_limit.toml  BP014_cross_join.toml
src/burnt-engine/rules/SDP/: SDP001_missing_expectation.toml  SDP002_dlt_incremental_no_key.toml  SDP003_dlt_streaming_no_schema.toml  SDP004_materialized_view_full_refresh.toml  SDP005_missing_table_comment.toml
src/burnt-engine/rules/SQL/: BQ001_not_in_with_nulls.toml  BQ002_union_not_all.toml  BQ003_count_distinct_at_scale.toml  BQ004_correlated_subquery.toml  SQ001_select_star.toml  SQ002_cross_join.toml  SQ003_cartesian_product.toml
src/burnt-engine/rules/Style/: BNT_C01_df_reference.toml  BNT_I01_star_import.toml  BNT_N01_generic_df_name.toml
src/burnt-engine/rules/delta/: BD001_delta_vacuum_too_frequent.toml  BD002_missing_zorder.toml
src/burnt-engine/rules/notebook/: BB001_cluster_tag_missing.toml  BN001_missing_run_target.toml  BN002_dynamic_sql.toml  BN003_circular_run.toml  BP005_missing_cell_type.toml  BP006_large_notebook.toml  BP007_no_markdown.toml
src/burnt-engine/rules/performance/python/: BP001_cell_no_comment.toml  BP002_long_line.toml  BP003_magic_in_plain.toml  BP004_deprecated_magic.toml  BP008_collect_without_limit.toml  BP010_python_udf.toml  BP011_to_pandas.toml  BP012_repartition_one.toml  BP014_cross_join.toml  BP015_pandas_udf.toml  BP016_count_without_filter.toml  BP020_with_column_in_loop.toml  BP021_jdbc_incomplete_partition.toml  BP022_sdp_prohibited_ops.toml  BP023_window_without_partition_by.toml  BP030_cache_without_unpersist.toml  BP031_single_use_cache.toml  BP032_repeated_actions_no_cache.toml
src/burnt-engine/rules/sdp/: SDP001_missing_expectation.toml  SDP002_dlt_incremental_no_key.toml  SDP003_sdp_streaming_no_schema.toml  SDP004_materialized_view_full_refresh.toml  SDP005_missing_table_comment.toml
src/burnt-engine/rules/sql/: BP013_order_by_without_limit.toml  BQ001_not_in_with_nulls.toml  BQ002_union_not_all.toml  BQ003_count_distinct_at_scale.toml  BQ004_correlated_subquery.toml  SQ001_select_star.toml  SQ002_cross_join.toml  SQ003_cartesian_product.toml
src/burnt-engine/rules/style/: BNT_C01_df_reference.toml  BNT_I01_star_import.toml  BNT_N01_generic_df_name.toml
src/burnt-engine/rules/tier1/notebook/: BB001_cluster_tag_missing.toml  BN001_missing_run_target.toml  BN002_dynamic_sql.toml  BN003_circular_run.toml  BP005_missing_cell_type.toml  BP006_large_notebook.toml  BP007_no_markdown.toml
src/burnt-engine/rules/tier1/python/: BP001_cell_no_comment.toml  BP002_long_line.toml  BP003_magic_in_plain.toml  BP004_deprecated_magic.toml  BP008_collect_without_limit.toml  BP010_python_udf.toml  BP011_to_pandas.toml  BP012_repartition_one.toml  BP014_cross_join.toml  BP015_pandas_udf.toml  BP016_count_without_filter.toml  DLT001_missing_expectation.toml  DLT002_dlt_incremental_no_key.toml  DLT003_dlt_streaming_no_schema.toml  DLT005_missing_table_comment.toml
src/burnt-engine/rules/tier1/sql/: BD002_missing_zorder.toml  BP009_select_star.toml  BP013_order_by_without_limit.toml  BP014_cross_join.toml  BQ001_not_in_with_nulls.toml  BQ002_union_not_all.toml
src/burnt-engine/rules/tier2/python/: BNT_C01_df_reference.toml  BNT_I01_star_import.toml  BNT_N01_generic_df_name.toml  BP020_with_column_in_loop.toml  BP021_jdbc_incomplete_partition.toml  BP022_sdp_prohibited_ops.toml  BP023_window_without_partition_by.toml  DLT004_materialized_view_full_refresh.toml
src/burnt-engine/rules/tier2/sql/: BD001_delta_vacuum_too_frequent.toml  BQ003_count_distinct_at_scale.toml  BQ004_correlated_subquery.toml  SQ001_select_star.toml  SQ002_cross_join.toml  SQ003_cartesian_product.toml
src/burnt-engine/rules/tier3/python/: BP030_cache_without_unpersist.toml  BP031_single_use_cache.toml  BP032_repeated_actions_no_cache.toml
src/burnt-engine/src/: detect.rs  lib.rs  types.rs
src/burnt-engine/src/graph/: dlt.rs  mod.rs  python.rs  sdp.rs  sql.rs
src/burnt-engine/src/ingestion/: dabs.rs  files.rs  mod.rs
src/burnt-engine/src/parse/: mod.rs  notebooks.rs  python.rs  sql.rs
src/burnt-engine/src/rules/: context.rs  dataflow.rs  finding.rs  mod.rs  notebook_queries.rs  query.rs
src/burnt-engine/src/rules/cinder/: compiler.rs  mod.rs  parser.rs
src/burnt-engine/src/semantic/: bindings.rs  mod.rs  scope.rs
(+350 files in other folders)
