[project]
name = "burnt"
version = "0.1.0"
description = "Pre-execution cost estimation for Databricks workloads"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0",
    "typer>=0.15",
    "rich>=13.0",
    "requests>=2.32.5",
    "databricks-sdk>=0.20.0",
]

[project.optional-dependencies]
sql = ["sqlglot>=26.0"]
forecasting = ["prophet>=1.1"]
ml = ["scikit-learn>=1.3"]
all = ["burnt[sql,forecasting,ml]"]

[project.scripts]
burnt = "burnt.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burnt"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "pytest-randomly>=4.0",
    "pytest-timeout>=2.3",
    "pytest-mock>=3.14",
    "hypothesis>=6.130",
]
lint = [
    "ruff>=0.8",
    "bandit[toml]>=1.9",
    "xenon>=0.9",
    "vulture>=2.14",
    "pip-audit>=2.9",
    "interrogate>=1.7",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--import-mode=importlib",
]
markers = [
    "unit: fast isolated tests with no external dependencies",
    "integration: tests requiring Databricks connectivity",
    "slow: tests taking >5s",
]
timeout = 30
timeout_method = "signal"
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
source_pkgs = ["burnt"]
branch = true
parallel = true

[tool.coverage.paths]
source = ["src/burnt", "*/site-packages/burnt"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
fail_under = 80
exclude_also = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["burnt"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests/*"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-nested-functions = true
ignore-nested-classes = true
fail-under = 80
exclude = ["tests", "docs"]
verbose = 1
