[project]
name = "burnt"
version = "0.2.0"
description = "Pre-execution cost estimation for Databricks workloads"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "typer>=0.15,<1",
    "rich>=13.0,<14",
    "pyyaml>=6.0,<7",
    "requests>=2.32,<3",
    "tabulate>=0.9,<1",
]

[project.optional-dependencies]
sql = ["sqlglot>=26.0,<27"]
alerts = ["slack-sdk>=3.0,<4"]
databricks = ["databricks-sdk>=0.50,<1"]
all = ["burnt[sql,alerts,databricks]"]

[project.scripts]
burnt = "burnt.cli.main:app"

[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "burnt._engine"
manifest-path = "src/burnt-engine/Cargo.toml"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "pytest-randomly>=4.0",
    "pytest-timeout>=2.3",
    "pytest-mock>=3.14",
    "hypothesis>=6.130",
    "openpyxl>=3.1.5",
    "ruff>=0.15.5",
    "maturin>=1.0,<2",
]
lint = [
    "ruff>=0.8",
    "bandit[toml]>=1.9",
    "xenon>=0.9",
    "vulture>=2.14",
    "pip-audit>=2.9",
    "interrogate>=1.7",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--import-mode=importlib",
]
markers = [
    "unit: fast isolated tests with no external dependencies",
    "integration: tests requiring Databricks connectivity",
    "slow: tests taking >5s",
]
timeout = 30
timeout_method = "signal"
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
source_pkgs = ["burnt"]
branch = true
parallel = true

[tool.coverage.paths]
source = ["src/burnt", "*/site-packages/burnt"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
fail_under = 80
exclude_also = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "TCH", "RUF"]
ignore = ["E501", "UP006", "UP007", "UP035", "UP045"]

[tool.ruff.lint.isort]
known-first-party = ["burnt"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101"]
"templates/**/*" = ["F821", "E402", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests/*"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-nested-functions = true
ignore-nested-classes = true
fail-under = 80
exclude = ["tests", "docs"]
verbose = 1
