[package]
name = "burnt-engine"
version = "0.1.0"
edition = "2021"
description = "Rust engine for burnt cost estimation"
readme = "README.md"
license = "GPL-3.0-or-later"

[lib]
name = "burnt_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-sql = "0.3"
sqlparser = { version = "0.60", features = ["visitor"] }
toml = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true