[package]
name = "burnt-engine"
version = "0.1.0"
edition = "2021"
description = "Rust engine for burnt cost estimation"
readme = "README.md"
license = "GPL-3.0-or-later"

[lib]
name = "_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
strum = { version = "0.26", features = ["derive"] }
tree-sitter = "0.24"
streaming-iterator = "0.1"
tree-sitter-python = "0.23"
tree-sitter-sequel = "0.3"
sqlparser = { version = "0.60", features = ["visitor"] }
toml = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
tempfile = "3.14"

[dev-dependencies]
tempfile = "3.14"
insta = { version = "1.40", features = ["json", "yaml"] }

[build-dependencies]
pyo3-build-config = "0.22"
toml = "0.8"

[[test]]
name = "test_tier1_rules"
path = "../../tests/unit/rules/test_tier1_rules.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true